--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -61,11 +61,11 @@
 			"pia_name": "PIA",
 			"placeholder_pia_name": "Titolo della PIA",
 			"author": "Autore",
-			"placeholder_author": "TO BE TRANSLATED - Firstname, lastname",
+			"placeholder_author": "Nome, Cognome",
 			"evaluation": "Revisore",
-			"placeholder_evaluation": "TO BE TRANSLATED - Firstname, lastname",
+			"placeholder_evaluation": "Nome, Cognome",
 			"validation": "Validatore",
-			"placeholder_validation": "TO BE TRANSLATED - Firstname, lastname",
+			"placeholder_validation": "Nome, Cognome",
 			"date": "Data",
 			"status": "Stato",
 			"creation_status": "Inizializzazione",
@@ -120,7 +120,7 @@
 			"preview": "Anteprima",
 			"display_action_plan": "Mostra<br>il piano d'azione",
       "edition": "TO BE TRANSLATED - Edition",
-      "evaluation": "TO BE TRANSLATED - Evaluation"
+      "evaluation": "Valutazione"
 		},
 		"attachments": {
 			"title": "Allegati",
@@ -133,16 +133,16 @@
       "refuse_pia": "Rifiuta PIA",
       "status": {
         "evaluation": {
-          "title": "TO BE TRANSLATED - Waiting for review.",
+          "title": "Attendi la revisione.",
           "content": "TO BE TRANSLATED - This part has not yet been reviewed. If you wish to edit the content submitted for review you have to ",
-          "cancel": "TO BE TRANSLATED - cancel the review request.",
-          "cancel_button": "TO BE TRANSLATED - Cancel the review request"
+          "cancel": "cancella la richiesta di revisione.",
+          "cancel_button": "Cancella la richiesta di revisione"
         },
         "validation": {
-          "title": "TO BE TRANSLATED - Waiting for validation.",
+          "title": "Attendi la validazione.",
           "content": "TO BE TRANSLATED - This part has been reviewed and is waiting for the overall PIA validation. If you wish to change the review, you have to ",
-          "cancel": "TO BE TRANSLATED - cancel the validation request.",
-          "cancel_button": "TO BE TRANSLATED - Cancel the validation request"
+          "cancel": "cancella la richiesta di validazione.",
+          "cancel_button": "Cancella la richiesta di validazione"
         }
       }
 		},
@@ -829,25 +829,25 @@
     "responsible": "TO BE TRANSLATED - Person accountable for validating the PIA: ",
     "after_reading": "TO BE TRANSLATED - After reading full PIA relating to the data processing linked to ",
     "confirmation1": "TO BE TRANSLATED - I attest that the context of the processing described in the PIA is consistent with the reality.",
-    "confirmation2": "TO BE TRANSLATED - I attest that I am aware of the risks depending on the existing or planned measures.",
-    "confirmation3": "TO BE TRANSLATED - I ratify the corrective actions indicated in the action plan.",
+    "confirmation2": "TO BE TRANSLATED - Attesto di essere consapevole dei rischi relativi alle misure correnti o pianificate.",
+    "confirmation3": "TO BE TRANSLATED - Ratifico le azioni correttive indicatenel piano di azione.",
     "confirmation4": "TO BE TRANSLATED - I commit to implement as quickly as possible the indicated corrective actions.",
     "button": {
       "rejection": "TO BE TRANSLATED - Reject PIA",
-      "simple_validation": "TO BE TRANSLATED - Approve PIA <br>(direct)",
-      "signed_validation": "TO BE TRANSLATED - Approve PIA <br>(signed)"
+      "simple_validation": "Approva PIA <br>(diretto)",
+      "signed_validation": "Approva PIA <br>(firmato)"
     },
     "mandatory_fields": "TO BE TRANSLATED - All boxes must be checked",
     "waiting_for_signature": "TO BE TRANSLATED - Pending signed PIA",
-    "validated_pia_with_signature": "TO BE TRANSLATED - Approved",
+    "validated_pia_with_signature": "Approvato",
     "add_signed_pia": "TO BE TRANSLATED - Add the signed PIA",
-    "remove_attachment": "TO BE TRANSLATED - Remove the attachment",
-    "latest_signed_attachment": "TO BE TRANSLATED - Last signed attachment",
+    "remove_attachment": "rimuovi l'allegato",
+    "latest_signed_attachment": "Ultimo allegato firmato",
     "signed_attachments_history": "TO BE TRANSLATED - Signed attachments history",
     "tools": {
-      "dashboard": "TO BE TRANSLATED - Dashboard",
-      "display_pia": "TO BE TRANSLATED - Display PIA",
-      "action_plan": "TO BE TRANSLATED - Action plan"
+      "dashboard": "Dashboard",
+      "display_pia": "Vedi PIA",
+      "action_plan": "Piano di azione"
     }
   },
   "rejection_page": {
@@ -871,16 +871,16 @@
     "archive": "Archivia",
     "close": "Chiudi",
     "continue": "Continua",
-    "start_evaluation": "TO BE TRANSLATED - Start review",
+    "start_evaluation": "Inizia revisione",
     "back_to_home": "Torna alla home",
     "simple_pia_validation": {
       "content": "Il PIA è stato convalidato"
     },
     "completed_edition": {
-      "content": "TO BE TRANSLATED - The PIA has been fully edited, it has to be reviewed."
+      "content": "Il PIA è stato interamente editato, deve essere revisionato."
     },
     "completed_evaluation": {
-      "content": "TO BE TRANSLATED - The PIA has been fully reviewed, it has to be validated."
+      "content": "Il PIA è stato interamente revisionato, deve essere validato."
     },
     "update_server_url": {
       "content": "L'indirizzo del server è stato aggiornato."
@@ -910,7 +910,7 @@
       "content": "<span class='strong'>Congratulazioni,</span><br>la sottosezione è <br> disponibile per la convalida."
     },
     "validate_evaluation": {
-      "content": "TO BE TRANSLATED - <span class='strong'>Congratulations,</span><br>you've finished evaluating this section.<br>Others parts of the PIA has to be evaluated as well in order to be able to validate the PIA."
+      "content": "<span class='strong'>Congratulazioni,</span><br>hai terminato di valutare questa sezione.<br>Anche altre parti del PIA devono essere valutate per poter validare il PIA."
     },
     "validate_evaluation_to_correct": {
       "content": "Spiacente,<br>Diversi campi devono essere corretti.<br>Torna alla modalità modifica<br>per fare correzioni."
@@ -932,15 +932,15 @@
   "summary": {
     "previous_page": "Torna alla pagina precedente",
     "print": "Stampa",
-    "display_pia": "TO BE TRANSLATED - Display PIA",
-    "display_action_plan": "TO BE TRANSLATED - Display<br>action plan",
+    "display_pia": "Vedi PIA",
+    "display_action_plan": "Vedi<br>piano di azionen",
     "display_filters": {
       "title": "TO BE TRANSLATED - Filters",
       "main_content": "TO BE TRANSLATED - Display \"PIA information\"",
       "context_content": "TO BE TRANSLATED - Display \"Context\"",
       "principles_content": "TO BE TRANSLATED - Display \"Fundamental principles\"",
       "risks_content": "TO BE TRANSLATED - Display \"Risks\"",
-      "action_plan_content": "TO BE TRANSLATED - Display action plan"
+      "action_plan_content": "Vedi piano di azione"
     },
     "title": "Informazioni sul PIA",
     "pia_name": "PIA",
@@ -1287,10 +1287,10 @@
           "short_help": "Presentare l'opinione delle persone responsabili della protezione dei dati e dei problemi di privacy (o eventuali delegati). Presentare anche le opinioni dei soggetti interessati o di loro rappresentanti."
         },
         "4": {
-          "title": "TO BE TRANSLATED - Validate the PIA"
+          "title": "Valita il PIA"
         },
         "5": {
-          "title": "TO BE TRANSLATED - Rejected PIA"
+          "title": "PIA Rigettato"
         }
       }
     }
